--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 </head>
 
 <body>
-  <h1 style="text-align: center;"> Nothing to see here. </h1>
+  <h1 style="text-align: center;"> Hunting Fonts </h1>
 </body>
 
 </html>
