--- a/index.html
+++ b/index.html
@@ -19,6 +19,11 @@
   <link rel="stylesheet" href="/css/main.css">
 
   <meta name="theme-color" content="#fafafa">
+  <script>
+    body {
+      font-family: 'Literata';
+    }
+  </script>
 </head>
 
 <body>
