--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
   <!-- Place favicon.ico in the root directory -->
   
   <link rel="stylesheet" href="/css/main.css">
+  <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Literata:ital,wght@0,400;0,500;0,600;0,700;1,400;1,500;1,600;1,700&display=swap" type="text/css">
 
   <meta name="theme-color" content="#fafafa">
   <script>
