--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <head>
   <meta charset="utf-8">
-  <title></title>
+  <title>Huntingfonts</title>
   <meta name="description" content="">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   
@@ -16,19 +16,13 @@
   <link rel="apple-touch-icon" href="icon.png">
   <!-- Place favicon.ico in the root directory -->
   
-  <link rel="stylesheet" href="/css/main.css">
   <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Literata:ital,wght@0,400;0,500;0,600;0,700;1,400;1,500;1,600;1,700&display=swap" type="text/css">
-
-  <meta name="theme-color" content="#fafafa">
-  <script>
-    body {
-      font-family: 'Literata';
-    }
-  </script>
+  <link rel="stylesheet" href="css/main.css">
+  <!-- meta name="theme-color" content="#fafafa" -->
 </head>
 
 <body>
-  <h1 style="text-align: center;"> Hunting Fonts </h1>
+  <h1 style="text-align: center;"> Huntingfonts </h1>
 </body>
 
 </html>
