Add explicit font weights

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <title>Huntingfonts</title>
   <meta name="description" content="">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  
+
   <meta property="og:title" content="" />
   <meta property="og:type" content="" />
   <meta property="og:url" content="" />
@@ -15,14 +15,21 @@
   <link rel="manifest" href="site.webmanifest">
   <link rel="apple-touch-icon" href="icon.png">
   <!-- Place favicon.ico in the root directory -->
-  
-  <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Literata:ital,wght@0,400;0,500;0,600;0,700;1,400;1,500;1,600;1,700&display=swap" type="text/css">
+
+  <link rel="stylesheet"
+    href="https://fonts.googleapis.com/css2?family=Literata:ital,wght@0,400;0,500;0,600;0,700;1,400;1,500;1,600;1,700&display=swap"
+    type="text/css">
   <link rel="stylesheet" href="css/main.css">
   <!-- meta name="theme-color" content="#fafafa" -->
 </head>
 
 <body>
-  <h1 style="text-align: center;"> Huntingfonts </h1>
+  <div id="main-container" style="text-align: center;">
+    <h1 id="title">Huntingfonts</h1>
+    <p>Curated collection of complementary typography and well-placed fonts.</p>
+  </div>
+
+
 </body>
 
 </html>
